--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,12 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+public class EvenNumbers {
+    public static void main(String[] args) {
+        // Pętla przechodząca przez liczby od 1 do 100
+        for (int i = 1; i <= 100; i++) {
+            // Sprawdzenie, czy liczba jest parzysta
+            if (i % 2 == 0) {
+                // Wypisanie liczby parzystej
+                System.out.println(i);
+            }
+        }
+    }
+}
